--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,5 +27,19 @@ jobs:
     - name: Test
       run: go test -v ./...
 
+    - uses: actions/checkout@v4
+    
+    - name: Setup Go
+      uses: actions/setup-go@v5
+      with:
+          go-version: '1.21.x'
+    - name: Install dependencies
+      run: |
+          go get .
+          go get example.com/octo-examplemodule
+          go get example.com/octo-examplemodule@v1.3.4
+          
+
+
 
       
